--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.2",
     "antd": "^5.27.4",
     "axios": "^1.7.7",
+    "motion": "^12.23.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.2",
